# kbdbacklight-cli

./: .gitignore  README.md  kbdbacklight-cli.cabal
src/: KbdBacklight.hs  Main.hs
