name:                kbdbacklight-cli
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/kbdbacklight-cli#readme
license:             BSD3
license-file:        LICENSE
author:              Gabriel Tejeda
maintainer:          gabriel.tejeda@gmail.com
copyright:           2018 Gabriel Tejeda
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable kbdbacklight-cli
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       dbus
